--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -57,9 +57,18 @@ h1 {
     padding: 16px 18px 18px 26px;
 }
 
+.list-wrap:hover{
+    cursor: grab;
+}
+
+.list-wrap:active{
+    cursor: grabbing;
+}
+
 .list-wrap p {
     font-size: 14px;
     line-height: 2.2;
+    cursor: auto;
 }
 
 ul {
