--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -57,14 +57,6 @@ h1 {
     padding: 16px 18px 18px 26px;
 }
 
-.list-wrap:hover{
-    cursor: grab;
-}
-
-.list-wrap:active{
-    cursor: grabbing;
-}
-
 .list-wrap p {
     font-size: 14px;
     line-height: 2.2;
@@ -119,12 +111,10 @@ li a.current, li a.current:hover {
     color: #9A9998;
     font-weight: 200;
     font-size: 10px;
+    padding-bottom: 20px;
+    cursor: default;
 }
 
 .nav li a:hover, .nav li a:focus {
     background: #C97C50;
-}
-
-li a.current {
-    padding-bottom: 20px;
 }
