--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -52,9 +52,11 @@ h1 {
 }
 
 .list-wrap {
+    position: absolute;
     background: #E3E4E5;
     margin: 0 0 15px 0;
     padding: 16px 18px 18px 26px;
+    width: 374px;
 }
 
 .list-wrap:hover{
@@ -119,6 +121,7 @@ li a.current, li a.current:hover {
     color: #9A9998;
     font-weight: 200;
     font-size: 10px;
+
 }
 
 .nav li a:hover, .nav li a:focus {
@@ -126,5 +129,5 @@ li a.current, li a.current:hover {
 }
 
 li a.current {
-    padding-bottom: 20px;
+    height: 26px;
 }
